division by zero in sequencer_thumbnails.c #93166

Closed
opened 2021-11-17 22:06:37 +01:00 by Andrea Beconcini · 6 comments

System Information
Operating system: Linux Ubuntu 20.04
Graphics card: Intel Corporation UHD Graphics 620

Blender Version
Broken: 00a9617f92
Worked: unknown

runtime error (division by zero) while enabling thumbnails display in VSE.

  1. load a video or image strip in VSE.
  2. click on the sequencer overlay settings and enable thumbnails
  3. division by zero error is shown in the console (something like blender/editors/space_sequencer/sequencer_thumbnails.c:400:64: runtime error: division by zero

Peek 2021-11-17 21-55.gif

**System Information** Operating system: Linux Ubuntu 20.04 Graphics card: Intel Corporation UHD Graphics 620 **Blender Version** Broken: 00a9617f92fdae6c847575d10fac8a66e8322257 Worked: unknown runtime error (division by zero) while enabling thumbnails display in VSE. 1. load a video or image strip in VSE. 2. click on the _sequencer overlay_ settings and enable thumbnails 3. division by zero error is shown in the console (something like `blender/editors/space_sequencer/sequencer_thumbnails.c:400:64: runtime error: division by zero` ![Peek 2021-11-17 21-55.gif](https://archive.blender.org/developer/F11820990/Peek_2021-11-17_21-55.gif)

Added subscriber: @beco

Added subscriber: @beco

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I don't see any warnings here, but just looking at code I can confirm that issue is possible to be caused.

I don't see any warnings here, but just looking at code I can confirm that issue is possible to be caused.

This issue was referenced by b071083496

This issue was referenced by b071083496638e7e96b787f524a5b9add094010d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-11-18 01:12:56 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93166
No description provided.