Fix T93166: Division by zero when drawing thumbnails

Caused by incorrect step calculation fo too short strips. For these,
step should be equal to strip length not 0.